--- a/MusicApp_v2/PlayerPage.xaml
+++ b/MusicApp_v2/PlayerPage.xaml
@@ -2,48 +2,62 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MusicApp_v2.PlayerPage"
-             Title="PlayerPage"
              BackgroundColor="#580B0B">
+    <ScrollView>
+        <VerticalStackLayout Padding="20">
 
-    <VerticalStackLayout Padding="20" VerticalOptions="CenterAndExpand" HorizontalOptions="Center">
-
-        <ImageButton Source="back.png"
+            <ImageButton Source="back_1.png"
                      WidthRequest="80"
                      HeightRequest="60"
                      HorizontalOptions="Start"
-                     Clicked="BackButton_Clicked" />
+                     Clicked="BackButton_Clicked"/>
 
-        <Frame HasShadow="False" Padding="0" CornerRadius="15" Margin="30">
-            <Image x:Name="CoverImage"
+            <Frame HasShadow="False" Padding="0" CornerRadius="15" Margin="30">
+                <Image x:Name="CoverImage"
                    WidthRequest="286"
                    HeightRequest="286"
                    Aspect="AspectFill"/>
-        </Frame>
+            </Frame>
 
-        <Label x:Name="TitleLabel"
-               Text=""
+            <Label x:Name="TitleLabel"
                FontSize="20"
                FontAttributes="Bold"
                TextColor="#FDE4E4"
                HorizontalTextAlignment="Center"/>
 
-        <Label x:Name="ArtistLabel"
-               Text=""
+            <Label x:Name="ArtistLabel"
                FontSize="15"
                TextColor="#FDE4E4"
                HorizontalTextAlignment="Center"/>
 
-        <HorizontalStackLayout Spacing="30" HorizontalOptions="Center" Margin="25">
-            <Frame WidthRequest="55" HeightRequest="55" BackgroundColor="#FDE4E4" CornerRadius="27.5" HasShadow="False" Padding="0">
-                <Image Source="previous.png" WidthRequest="25" HeightRequest="25" HorizontalOptions="Center" VerticalOptions="Center" />
-            </Frame>
-            <Frame WidthRequest="55" HeightRequest="55" BackgroundColor="#FDE4E4" CornerRadius="27.5" HasShadow="False" Padding="0">
-                <Image Source="play.png" WidthRequest="25" HeightRequest="25" HorizontalOptions="Center" VerticalOptions="Center" />
-            </Frame>
-            <Frame WidthRequest="55" HeightRequest="55" BackgroundColor="#FDE4E4" CornerRadius="27.5" HasShadow="False" Padding="0">
-                <Image Source="next.png" WidthRequest="25" HeightRequest="25" HorizontalOptions="Center" VerticalOptions="Center" />
-            </Frame>
-        </HorizontalStackLayout>
+            <HorizontalStackLayout Spacing="30" HorizontalOptions="Center" Margin="25">
 
-    </VerticalStackLayout>
+                <!-- cofnij -->
+                <Frame WidthRequest="55" HeightRequest="55" BackgroundColor="#FDE4E4" CornerRadius="27.5" Padding="0">
+                    <ImageButton Source="previous.png"
+                             WidthRequest="25"
+                             HeightRequest="25"
+                             Clicked="PrevButton_Clicked"/>
+                </Frame>
+
+                <!-- play / pause -->
+                <Frame WidthRequest="55" HeightRequest="55" BackgroundColor="#FDE4E4" CornerRadius="27.5" Padding="0">
+                    <ImageButton Source="play.png"
+                             WidthRequest="25"
+                             HeightRequest="25"
+                             Clicked="PlayPauseButton_Clicked"/>
+                </Frame>
+
+                <!-- nastepna -->
+                <Frame WidthRequest="55" HeightRequest="55" BackgroundColor="#FDE4E4" CornerRadius="27.5" Padding="0">
+                    <ImageButton Source="next.png"
+                             WidthRequest="25"
+                             HeightRequest="25"
+                             Clicked="NextButton_Clicked"/>
+                </Frame>
+
+            </HorizontalStackLayout>
+
+        </VerticalStackLayout>
+    </ScrollView>
 </ContentPage>
